<resources>
    <string name="app_name">MEI</string>
    <string name="title_activity_not_log_fragment">NotLogFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="estados_array">
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Coahuila</item>
        <item>Colima</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Estado de México</item>
        <item>Durango</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>México</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Querétaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>
    <string name="title_activity_logued_fragment">Pagina Principal</string>
    <string name="valid_email_pattern">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="carrera">Carrera</string>
    <string name="becas">Becas</string>
    <string name="area">Area</string>
    <string name="descripcion">Descripcion</string>
    <string name="plan_de_estudios">Plan de estudios</string>
    <string name="intercambios">Intercambios</string>
    <string name="perfil_de_egreso">Perfil de egreso</string>
    <string name="title_activity_maps">Ubicación de la universidad</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">Zf9fexNkYxwdNavztzahalpH4</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">dIac2VlNdngrDeqbmWKSUFidgRvAA8z8QITazEV0kQz135c1aS</string>
</resources>
